MY_EKS_CODES/mysql-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql
  namespace: default
  labels:
    app: mysql
spec:
  replicas: 1
  selector:
    matchLabels:
      service: mysql
  template:
    metadata:
      labels:
        service: mysql
    spec:
      containers:
      - name: mysql
        image: robotshop/rs-mysql-db:latest
        ports:
        - containerPort: 3306
        resources:
          requests:
            cpu: 100m  # Corrected the CPU request suffix
            memory: 700Mi
          limits:
            cpu: 100m
            memory: 700Mi
