MY_EKS_CODES/payment-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment
  namespace: default
  labels:
    service: payment
spec:
  replicas: 1
  selector:
    matchLabels:
      service: payment
  template:
    metadata:
      labels:
        service: payment
    spec:
      containers:
      - name: payment
        image: robotshop/rs-payment:latest
        ports:
        - containerPort: 8080
        resources:
          requests:
            cpu: 100m
            memory: 50Mi
          limits:
            cpu: 100m
            memory: 50Mi
