MY_EKS_CODES/shipping-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shipping
  namespace: default
  labels:
    service: shipping
spec:
  replicas: 1
  selector:
    matchLabels:
      service: shipping
  template:
    metadata:
      labels:
        service: shipping
    spec:
      containers:
      - name: shipping
        image: robotshop/rs-shipping:latest
        ports:
        - containerPort: 8080
        resources:
          requests:
            cpu: 100m
            memory: 500Mi
          limits:
            cpu: 200m
            memory: 1000Mi
