MY_EKS_CODES/cart-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cart
  namespace: default
spec:
  selector:
    app: cart
  type: ClusterIP
  ports:
  - name: http
    protocol: TCP
    port: 8080
    targetPort: 8080
