MY_EKS_CODES/catalogue-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: catalogue
  namespace: default
spec:
  selector:
    app: catalogue
  type: ClusterIP
  ports:
  - name: http
    protocol: TCP
    port: 8080
    targetPort: 8080
