MY_EKS_CODES/dispatch-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dispatch
  labels:
    service: dispatch
spec:
  clusterIP: None
  ports:
  - name: headless
    port: 55555
    targetPort: 0
  selector:
    service: dispatch
