MY_EKS_CODES/redis-service.yaml
# apiVersion: v1
# kind: Service
# metadata:
#   labels:
#     service: redis
#   name: redis
# spec:
#   ports:
#   - name: redis
#     port: 6379
#     targetPort: 6379
#   selector:
#     service: redis
---
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: default
spec:
  selector:
    service: redis
  type: ClusterIP
  sessionAffinity: None
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 10800
  ports:
  - name: http
    protocol: TCP
    port: 6379
    targetPort: 6379
    # If you set the `spec.type` field to `NodePort` and you want a specific port number,
    # you can specify a value in the `spec.ports[*].nodePort` field.
