MY_EKS_CODES/shipping-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: shipping
  namespace: default
spec:
  selector:
    app: shipping
  type: ClusterIP
  sessionAffinity: None
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 10800
  ports:
  - name: http
    protocol: TCP
    port: 8080
    targetPort: 8080
