MY_EKS_CODES/user-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: user
  namespace: default
spec:
  selector:
    service: user
  type: ClusterIP
  sessionAffinity: None
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 10800
  ports:
  - name: http
    protocol: TCP
    port: 8080
    targetPort: 8080
