MY_EKS_CODES/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: robot-shop
  namespace: default
  annotations:
    alb.ingress.kubernetes.io/load-balancer-name: ingress-robot-shop
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/healthcheck-protocol: HTTP
    alb.ingress.kubernetes.io/target-type: ip
  
spec:
  ingressClassName: alb
  rules: 
   - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: web
            port:
              number: 8080
